[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Jumbler/Jumbler.gd" type="Script" id=1]
[ext_resource path="res://sounds/sfx_jumble.wav" type="AudioStream" id=2]

[node name="Jumbler" type="Node"]
script = ExtResource( 1 )

[node name="JumbleTimer" type="Timer" parent="."]

[node name="JumbleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="JumbleTimer" to="." method="_on_JumbleTimer_timeout"]
